--- a/index.html
+++ b/index.html
@@ -13,5 +13,48 @@
 </head>
 
 <body>
+
+  <section id="intro-box">
+    <div id="info">
+      <header>
+        <img src="assets/images/user.png" alt="Foto de perfil">
+        <p>Hello World! Meu nome é Martina Santos e sou</p>
+        <h1>Desenvolvedora Fullstack</h1>
+        <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+      </header>
+      <div id="skills">
+        <div class="content-skills">
+          <img src="assets/icons/github.svg" alt="Logo do GitHub">
+          <span>GitHub</span>
+        </div>
+        <div class="content-skills">
+          <img src="assets/icons/html.svg" alt="Logo do HTML">
+          <span>HTML</span>
+        </div>
+        <div class="content-skills">
+          <img src="assets/icons/css.svg" alt="Logo do CSS">
+          <span>CSS</span>
+        </div>
+        <div class="content-skills">
+          <img src="assets/icons/javascript.svg" alt="Logo do JavaScript">
+          <span>JavaScript</span>
+        </div>
+        <div class="content-skills">
+          <img src="assets/icons/react.svg" alt="Logo do React">
+          <span>React</span>
+        </div>
+        <div class="content-skills">
+          <img src="assets/icons/node-js.svg" alt="Logo do Node.js">
+          <span>Node.js</span>
+        </div>
+      </div>
+    </div>
+    <img src="assets/icons/caret-double-down.svg" alt="Duas setinhas apontando para baixo">
+  </section>
+
+  <section id="projects-box"></section>
+  <section id="services-box"></section>
+  <section id="contact-box"></section>
+  
 </body>
 </html>
