--- a/index.html
+++ b/index.html
@@ -18,41 +18,79 @@
     <div id="info">
       <header>
         <img src="assets/images/user.png" alt="Foto de perfil">
-        <p>Hello World! Meu nome é Martina Santos e sou</p>
-        <h1>Desenvolvedora Fullstack</h1>
-        <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+        <p class="helo-info subtitle">Hello World! Meu nome é <span>Martina Santos</span> e sou</p>
+        <h1 class="title-lg">Desenvolvedora Fullstack</h1>
+        <p class="description-info text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
       </header>
       <div id="skills">
         <div class="content-skills">
           <img src="assets/icons/github.svg" alt="Logo do GitHub">
-          <span>GitHub</span>
+          <span class="text-md">GitHub</span>
         </div>
         <div class="content-skills">
           <img src="assets/icons/html.svg" alt="Logo do HTML">
-          <span>HTML</span>
+          <span class="text-md">HTML</span>
         </div>
         <div class="content-skills">
           <img src="assets/icons/css.svg" alt="Logo do CSS">
-          <span>CSS</span>
+          <span class="text-md">CSS</span>
         </div>
         <div class="content-skills">
           <img src="assets/icons/javascript.svg" alt="Logo do JavaScript">
-          <span>JavaScript</span>
+          <span class="text-md">JavaScript</span>
         </div>
         <div class="content-skills">
           <img src="assets/icons/react.svg" alt="Logo do React">
-          <span>React</span>
+          <span class="text-md">React</span>
         </div>
         <div class="content-skills">
           <img src="assets/icons/node-js.svg" alt="Logo do Node.js">
-          <span>Node.js</span>
+          <span class="text-md">Node.js</span>
         </div>
       </div>
     </div>
-    <img src="assets/icons/caret-double-down.svg" alt="Duas setinhas apontando para baixo">
+    <img id="double-down" src="assets/icons/caret-double-down.svg" alt="Duas setinhas apontando para baixo">
   </section>
 
-  <section id="projects-box"></section>
+  <section id="projects-box">
+    <div id="text-projects">
+      <p class="subtitle">Meu trabalho</p>
+      <h2 class="title-md">Veja os projetos em destaque</h2>
+    </div>
+    <div id="grid-projects">
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-01.png" alt="Projeto 1 do portfolio">
+        <h3>Travelgram</h3>
+        <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+      </div>
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-02.png" alt="Projeto 2 do portfolio">
+        <h3>Tech News</h3>
+        <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+      </div>
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-03.png" alt="Projeto 3 do portfolio">
+        <h3>Página de receita</h3>
+        <p>Página com o passo a passo de uma receita para cupcakes</p>
+      </div>
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-04.png" alt="Projeto 4 do portfolio">
+        <h3>Zingen</h3>
+        <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+      </div>
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-05.png" alt="Projeto 5 do portfolio">
+        <h3>Refund</h3>
+        <p>Um sistema para pedido e acompanhamento de reembolso </p>
+      </div>
+      <div class="project">
+        <img src="assets/images/Thumbnail_Project-06.png" alt="Projeto 6 do portfolio">
+        <h3>Página de turismo</h3>
+        <p>Página com as principais informações para quem quer viajar para Busan</p>
+      </div>
+      
+    </div>
+  </section>
   <section id="services-box"></section>
   <section id="contact-box"></section>
   
