service css finished

--- a/index.html
+++ b/index.html
@@ -60,38 +60,63 @@
     <div id="grid-projects">
       <div class="project">
         <img src="assets/images/Thumbnail_Project-01.png" alt="Projeto 1 do portfolio">
-        <h3>Travelgram</h3>
-        <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+        <h3 class="title-sm">Travelgram</h3>
+        <p class="text-sm-5">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
       </div>
       <div class="project">
         <img src="assets/images/Thumbnail_Project-02.png" alt="Projeto 2 do portfolio">
-        <h3>Tech News</h3>
-        <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+        <h3 class="title-sm">Tech News</h3>
+        <p class="text-sm-5">Homepage de um portal de notícias sobre a área de tecnologia</p>
       </div>
       <div class="project">
         <img src="assets/images/Thumbnail_Project-03.png" alt="Projeto 3 do portfolio">
-        <h3>Página de receita</h3>
-        <p>Página com o passo a passo de uma receita para cupcakes</p>
+        <h3 class="title-sm">Página de receita</h3>
+        <p class="text-sm-5">Página com o passo a passo de uma receita para cupcakes</p>
       </div>
       <div class="project">
         <img src="assets/images/Thumbnail_Project-04.png" alt="Projeto 4 do portfolio">
-        <h3>Zingen</h3>
-        <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+        <h3 class="title-sm">Zingen</h3>
+        <p class="text-sm-5">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
       </div>
       <div class="project">
         <img src="assets/images/Thumbnail_Project-05.png" alt="Projeto 5 do portfolio">
-        <h3>Refund</h3>
-        <p>Um sistema para pedido e acompanhamento de reembolso </p>
+        <h3 class="title-sm">Refund</h3>
+        <p class="text-sm-5">Um sistema para pedido e acompanhamento de reembolso </p>
       </div>
       <div class="project">
         <img src="assets/images/Thumbnail_Project-06.png" alt="Projeto 6 do portfolio">
-        <h3>Página de turismo</h3>
-        <p>Página com as principais informações para quem quer viajar para Busan</p>
+        <h3 class="title-sm">Página de turismo</h3>
+        <p class="text-sm-5">Página com as principais informações para quem quer viajar para Busan</p>
       </div>
-      
     </div>
   </section>
-  <section id="services-box"></section>
+
+  <section id="services-box">
+    <div id="text-services">
+      <p class="subtitle">Meus serviços</p>
+      <h2 class="title-md">Como posso ajudar seu negócio</h2>
+    </div>
+
+    <div id="grid-services">
+      <div class="card-services">
+        <img class="icon-services" src="assets/icons/devices.svg" alt="Logo de dispositivos">
+        <h3 class="title-sm">Websites e Aplicativos</h3>
+        <p class="text-sm-5">Desenvolvimento de interfaces</p>
+      </div>
+      <div class="card-services">
+        <img class="icon-services" src="assets/icons/hard-drives.svg" alt="Logo de sistema de banco de dados">
+        <h3 class="title-sm">API e banco de dados</h3>
+        <p class="text-sm-5">Criação de serviços do sistema </p>
+      </div>
+      <div class="card-services">
+        <img class="icon-services" src="assets/icons/infinity.svg" alt="Logo do dev ops">
+        <h3 class="title-sm">DevOps</h3>
+        <p class="text-sm-5">Gestão e infraestrutura da aplicação</p>
+      </div>
+    </div>
+
+  </section>
+
   <section id="contact-box"></section>
   
 </body>
