finished css on the contact

--- a/index.html
+++ b/index.html
@@ -117,7 +117,40 @@
 
   </section>
 
-  <section id="contact-box"></section>
+  <section id="contact-box">
+    <div id="text-contact">
+      <p class="subtitle purple">Contato</p>
+      <h2 class="title-md">Gostou do meu trabalho? </h2>
+      <p class="text-md">Entre em contato ou acompanhe as minhas redes sociais!</p>
+    </div>
+    
+    <div id="grid-contact">
+      <div class="card-contact">
+        <img src="assets/icons/linkedin-logo.svg" alt="Logo do Linkedin ">
+        <span class="text-md">Linkedin</span>
+        <img src="assets/icons/arrow-up-right.svg" alt="setinha apontada para cima">
+      </div>
+
+      <div class="card-contact">
+        <img src="assets/icons/instagram-logo.svg" alt="Logo do Instagram ">
+        <span class="text-md">Instagram</span>
+        <img src="assets/icons/arrow-up-right.svg" alt="setinha apontada para cima">
+      </div>
+
+      <div class="card-contact">
+        <img src="assets/icons/github-logo.svg" alt="Logo do GitHub ">
+        <span class="text-md">GitHub</span>
+        <img src="assets/icons/arrow-up-right.svg" alt="setinha apontada para cima">
+      </div>
+
+      <div class="card-contact">
+        <img src="assets/icons/envelope.svg" alt="Logo do Linkedin ">
+        <span class="text-md">E-mail</span>
+        <img src="assets/icons/arrow-up-right.svg" alt="setinha apontada para cima">
+      </div>
+
+    </div>
+  </section>
   
 </body>
 </html>
